# PIAnalysis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  analysis.py  run.py  shared_cmake.txt
acceptance/: CMakeLists.txt  README.org
acceptance/include/: PIAccAnalyzer.hpp  PIAnaAcc_linkdef.h  PIAnaAtarPho.hpp  PIAnaCluster.hpp  PIAnaConst.hpp  PIAnaEvtBase.hpp  PIAnaGraph.hpp  PIAnaHit.hpp  PIAnaPat.hpp  PIAnaPointCloud.hpp  PIAnalyzer.hpp  PIEventAction.hpp  PIEventAnalyzer.hpp  PIEventData.hpp  PIEventFilter.hpp  PIEventProducer.hpp  PIEvtNbFilter.hpp  PIFilterBase.hpp  PIFilterPiDAR.hpp  PIHitProducer.hpp  PIJobManager.hpp  PIMichelEnergyAnalyzer.hpp  PIPiDARFilter.hpp  PIPiDecayInSi.hpp  PIPointCloud.hpp  PIPointWrapper.hpp  PITkFinder.hpp  PITopoProducer.hpp  PITreeAnalyzer.hpp  PITrueDecPos.hpp  PITrueMomProducer.hpp  Vector.h
acceptance/src/: PIAccAnalyzer.cpp  PIAnaAtarPho.cpp  PIAnaCluster.cpp  PIAnaConst.cpp  PIAnaEvtBase.cpp  PIAnaGraph.cpp  PIAnaHit.cpp  PIAnaPat.cpp  PIAnaPointCloud.cpp  PIAnalyzer.cpp  PIEventAnalyzer.cpp  PIEventFilter.cpp  PIEventProducer.cpp  PIEvtNbFilter.cpp  PIFilterBase.cpp  PIFilterPiDAR.cpp  PIHitProducer.cpp  PIJobManager.cpp  PIMichelEnergyAnalyzer.cpp  PIPiDARFilter.cpp  PIPiDecayInSi.cpp  PITkFinder.cpp  PITopoProducer.cpp  PITreeAnalyzer.cpp  PITrueDecPos.cpp  PITrueMomProducer.cpp
acceptance/test/: CMakeLists.txt  display_track.sh  draw.C  draw_tcluster.C  run_hit_merger.C  run_michel.C  run_pienu.C  run_test.C  test_atarpho.C  test_closest_dis.cpp  test_connected_components.cpp  test_decay_mom.C  test_eventdata.C  test_job.C  test_pi_hit.C  test_pienu.C  test_tcluster.C  test_tkfinder.py  test_xyzcluster.C  toymc.C
analysis/: Annihilation.ipynb  analysis.py  angle_analysis.ipynb  annihilation.ipynb  convert_michel.py  estimate_error.ipynb  mutoe_michel_spectrum.txt  plot_eff_5hits.ipynb  plot_ratio.C
batch/: README.org  acknowledgement.txt  compile_in_container.sh  merge_files.py  run_geant_container.sh  run_pienu.C  run_pienu.sh  run_pimue.C  run_pimue.sh  run_sub.sh  run_sub_new_sample.sh  submit_TargetSim.py  utils.C
python/: analysis.py  pyproject.toml
tools/: mk_piaction.py
