[tool.poetry]
name = "skhep"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11,<3.13"
scikit-hep = "^2023.10.1"
numba = "^0.58.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
